--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.17",
     "@mui/styles": "^5.15.17",
     "@reduxjs/toolkit": "^2.2.4",
+    "axios": "^1.7.9",
     "i18next": "^24.2.1",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-i18next": "^15.4.0",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
